--- a/assets/pages/extras.html
+++ b/assets/pages/extras.html
@@ -15,17 +15,19 @@
     margin:0;padding:40px;background:var(--bg);color:var(--text);
     font-family:'Orbitron',sans-serif;display:flex;flex-direction:column;
     align-items:center;justify-content:flex-start;height:100vh;overflow-y:auto;
+    position:relative;z-index:1;
   }
   h1 {font-size:2.2em;margin-bottom:30px;text-transform:uppercase;color:var(--accent);}
-  .extras-buttons {display:flex;gap:20px;flex-wrap:wrap;justify-content:center;}
+  .extras-buttons {display:flex;gap:20px;flex-wrap:wrap;justify-content:center;z-index:2;}
   .extras-btn {
     background:var(--surface);border:2px solid var(--border);color:var(--text);
     padding:15px 30px;border-radius:10px;cursor:pointer;font-size:1em;
     text-transform:uppercase;letter-spacing:1px;transition:all .3s ease;
+    position:relative;z-index:3;
   }
   .extras-btn:hover {background:var(--accent);color:#fff;transform:translateY(-3px);}
   .modal {
-    display:none;position:fixed;z-index:999;left:0;top:0;width:100%;height:100%;
+    display:none;position:fixed;z-index:1000;left:0;top:0;width:100%;height:100%;
     background:rgba(10,10,20,.8);backdrop-filter:blur(5px);justify-content:center;align-items:center;
   }
   .modal.active{display:flex;}
@@ -33,6 +35,7 @@
     background:var(--card-bg);border:2px solid var(--border);border-radius:15px;
     padding:25px;width:80%;max-width:700px;max-height:80%;overflow-y:auto;
     box-shadow:0 0 20px var(--accent);animation:fadeIn .3s ease;
+    z-index:1001;position:relative;
   }
   .modal-header {
     display:flex;justify-content:space-between;align-items:center;margin-bottom:15px;
@@ -58,27 +61,24 @@
   }
   .link-btn:hover{background:var(--blue);}
   @keyframes fadeIn{from{opacity:0;transform:translateY(10px);}to{opacity:1;transform:translateY(0);}}
-
-    #particles-js {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 0;
+  #particles-js {
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    z-index:-1;
+    pointer-events:none;
   }
 </style>
 </head>
 <body>
-
 <div id="particles-js"></div>
-  
 <h1>Extras</h1>
 <div class="extras-buttons">
   <button class="extras-btn" onclick="openModal('credits-modal')"><i class="fa-solid fa-star"></i> Credits</button>
   <button class="extras-btn" onclick="openModal('partners-modal')"><i class="fa-solid fa-handshake"></i> Partners</button>
 </div>
-
 <div class="modal" id="credits-modal">
   <div class="modal-content">
     <div class="modal-header">
@@ -103,7 +103,6 @@
     </div>
   </div>
 </div>
-
 <div class="modal" id="partners-modal">
   <div class="modal-content">
     <div class="modal-header">
@@ -128,7 +127,6 @@
     </div>
   </div>
 </div>
-
 <div class="modal" id="profile-modal">
   <div class="modal-content">
     <div class="modal-header">
@@ -144,7 +142,6 @@
     </div>
   </div>
 </div>
-
 <div class="modal" id="partner-link-modal">
   <div class="modal-content">
     <div class="modal-header">
@@ -158,15 +155,44 @@
     </div>
   </div>
 </div>
-  
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-
+<script>
+particlesJS("particles-js", {
+  "particles": {
+    "number": { "value": 60 },
+    "color": { "value": ["#7a5cff", "#00bfff"] },
+    "shape": { "type": "circle" },
+    "opacity": { "value": 0.5 },
+    "size": { "value": 2 },
+    "line_linked": {
+      "enable": true,
+      "distance": 130,
+      "color": "#7a5cff",
+      "opacity": 0.2,
+      "width": 1
+    },
+    "move": {
+      "enable": true,
+      "speed": 1.2,
+      "direction": "none",
+      "out_mode": "out"
+    }
+  },
+  "interactivity": {
+    "events": {
+      "onhover": { "enable": true, "mode": "repulse" },
+      "onclick": { "enable": false }
+    },
+    "modes": { "repulse": { "distance": 100 } }
+  },
+  "retina_detect": true
+});
+</script>
 <script>
 let currentPartner={};
 function openModal(id){document.getElementById(id).classList.add('active');}
 function closeModal(id){document.getElementById(id).classList.remove('active');}
 document.querySelectorAll('.modal').forEach(m=>m.addEventListener('click',e=>{if(e.target===m)closeModal(m.id);}));
-
 function openProfile(name,role,desc,img){
   document.getElementById('profile-name').innerText=name;
   document.getElementById('profile-role').innerText=role;
@@ -174,7 +200,6 @@ function openProfile(name,role,desc,img){
   document.getElementById('profile-img').src=img;
   openModal('profile-modal');
 }
-
 function handlePartnerClick(name,owner,desc,img,discord,website){
   if((!discord||discord==='none')&&website){
     window.open(website,'_blank');
@@ -188,7 +213,6 @@ function handlePartnerClick(name,owner,desc,img,discord,website){
   document.getElementById('partner-name').innerText=name;
   openModal('partner-link-modal');
 }
-
 document.getElementById('discord-btn').addEventListener('click',()=>{
   closeModal('partner-link-modal');
   if(currentPartner.discord&&currentPartner.discord!=='none')window.open(currentPartner.discord,'_blank');
@@ -199,7 +223,6 @@ document.getElementById('website-btn').addEventListener('click',()=>{
   if(currentPartner.website&&currentPartner.website!=='none')window.open(currentPartner.website,'_blank');
   else if(currentPartner.discord)window.open(currentPartner.discord,'_blank');
 });
-
 try{
   const themeVars=window.parent.document.documentElement.style;
   for(let i=0;i<themeVars.length;i++){
@@ -209,86 +232,28 @@ try{
 }catch(e){}
 </script>
 <script>
-  const root = document.documentElement;
-  const themes = {
-    default: {
-      "--bg": "#0b0a16",
-      "--accent": "#7a5cff",
-      "--blue": "#00bfff",
-      "--text": "#e6e6ff",
-      "--surface": "rgba(255,255,255,0.05)",
-      "--border": "rgba(255,255,255,0.1)",
-      "--card-bg": "rgba(255,255,255,0.03)"
-    },
-    cyber: {
-      "--bg": "#050c1b",
-      "--accent": "#39ff14",
-      "--blue": "#00ffff",
-      "--text": "#e0ffe0",
-      "--surface": "rgba(0,255,0,0.05)",
-      "--border": "rgba(0,255,0,0.1)",
-      "--card-bg": "rgba(0,255,0,0.03)"
-    },
-    sunset: {
-      "--bg": "#1a0b0b",
-      "--accent": "#ff6f61",
-      "--blue": "#ffa500",
-      "--text": "#fff0e6",
-      "--surface": "rgba(255,110,100,0.05)",
-      "--border": "rgba(255,110,100,0.1)",
-      "--card-bg": "rgba(255,110,100,0.03)"
-    },
-    neon: {
-      "--bg": "#0f0020",
-      "--accent": "#ff00ff",
-      "--blue": "#00ffff",
-      "--text": "#ffffff",
-      "--surface": "rgba(255,0,255,0.05)",
-      "--border": "rgba(255,0,255,0.1)",
-      "--card-bg": "rgba(255,0,255,0.03)"
-    },
-    darkred: {
-      "--bg": "#1b0000",
-      "--accent": "#ff0000",
-      "--blue": "#cc0000",
-      "--text": "#ffe6e6",
-      "--surface": "rgba(255,0,0,0.05)",
-      "--border": "rgba(255,0,0,0.1)",
-      "--card-bg": "rgba(255,0,0,0.03)"
-    },
-    dnv2: {
-      "--bg": "#050007",
-      "--accent": "#ff00de",
-      "--blue": "#00fff7",
-      "--text": "#ffffff",
-      "--surface": "rgba(255, 0, 255, 0.05)",
-      "--border": "rgba(255, 0, 255, 0.15)",
-      "--card-bg": "rgba(15, 0, 30, 0.7)"
-    }
-  };
-
-
-  function applyTheme(theme) {
-    Object.entries(theme).forEach(([v, k]) => root.style.setProperty(v, k));
-    const frame = document.getElementById("content-frame");
-    try {
-      Object.entries(theme).forEach(([v, k]) => frame.contentWindow.document.documentElement.style.setProperty(v, k));
-    } catch (e) {}
-  }
-
-  function loadTheme() {
-    const name = localStorage.getItem("dominum-theme") || "default";
-    if (name === "custom") {
-      const t = JSON.parse(localStorage.getItem("dominum-custom-theme") || "{}");
-      applyTheme(t);
-    } else applyTheme(themes[name]);
-  }
-  if (name === "custom") {
-    const t = JSON.parse(localStorage.getItem("dominum-custom-theme") || "{}");
-    Object.entries(t).forEach(([v, k]) => root.style.setProperty(v, k));
-  } else Object.entries(themes[name]).forEach(([v, k]) => root.style.setProperty(v, k));
-  
-  loadTheme();
+const root=document.documentElement;
+const themes={
+  default:{"--bg":"#0b0a16","--accent":"#7a5cff","--blue":"#00bfff","--text":"#e6e6ff","--surface":"rgba(255,255,255,0.05)","--border":"rgba(255,255,255,0.1)","--card-bg":"rgba(255,255,255,0.03)"},
+  cyber:{"--bg":"#050c1b","--accent":"#39ff14","--blue":"#00ffff","--text":"#e0ffe0","--surface":"rgba(0,255,0,0.05)","--border":"rgba(0,255,0,0.1)","--card-bg":"rgba(0,255,0,0.03)"},
+  sunset:{"--bg":"#1a0b0b","--accent":"#ff6f61","--blue":"#ffa500","--text":"#fff0e6","--surface":"rgba(255,110,100,0.05)","--border":"rgba(255,110,100,0.1)","--card-bg":"rgba(255,110,100,0.03)"},
+  neon:{"--bg":"#0f0020","--accent":"#ff00ff","--blue":"#00ffff","--text":"#ffffff","--surface":"rgba(255,0,255,0.05)","--border":"rgba(255,0,255,0.1)","--card-bg":"rgba(255,0,255,0.03)"},
+  darkred:{"--bg":"#1b0000","--accent":"#ff0000","--blue":"#cc0000","--text":"#ffe6e6","--surface":"rgba(255,0,0,0.05)","--border":"rgba(255,0,0,0.1)","--card-bg":"rgba(255,0,0,0.03)"},
+  dnv2:{"--bg":"#050007","--accent":"#ff00de","--blue":"#00fff7","--text":"#ffffff","--surface":"rgba(255,0,255,0.05)","--border":"rgba(255,0,255,0.15)","--card-bg":"rgba(15,0,30,0.7)"}
+};
+function applyTheme(theme){Object.entries(theme).forEach(([v,k])=>root.style.setProperty(v,k));const frame=document.getElementById("content-frame");try{Object.entries(theme).forEach(([v,k])=>frame.contentWindow.document.documentElement.style.setProperty(v,k));}catch(e){}}
+function loadTheme(){
+  const name=localStorage.getItem("dominum-theme")||"default";
+  if(name==="custom"){
+    const t=JSON.parse(localStorage.getItem("dominum-custom-theme")||"{}");
+    applyTheme(t);
+  }else applyTheme(themes[name]);
+}
+if(name==="custom"){
+  const t=JSON.parse(localStorage.getItem("dominum-custom-theme")||"{}");
+  Object.entries(t).forEach(([v,k])=>root.style.setProperty(v,k));
+}else Object.entries(themes[name]).forEach(([v,k])=>root.style.setProperty(v,k));
+loadTheme();
 </script>
 </body>
 </html>
